Changed menus.html for new 'help' class.

--- a/help/menus.html
+++ b/help/menus.html
@@ -73,13 +73,13 @@
     &nbsp;&nbsp;&nbsp; Use this to toggle between an upper-case-only and mixed-case keyboard.<BR>
     &nbsp;&nbsp;&nbsp; (When this is selected, the menu item will change to: "Use Uppercase-only<BR> 
     &nbsp;&nbsp;&nbsp; Keyboard").
-<h4>Echo Screen Text to Console</h4>
+<h4>Echo Screen Text to Terminal</h4>
     &nbsp;&nbsp;&nbsp; If ApplePi has been run from the command line (i.e. from a terminal window),<BR>
     &nbsp;&nbsp;&nbsp; text output to the ApplePi screen, as well as anything entered from the keyboard,<BR> 
     &nbsp;&nbsp;&nbsp; will be echoed to the terminal window. (When this is selected, the menu item<BR>
-    &nbsp;&nbsp;&nbsp; will change to: "Stop Echo to Console").
+    &nbsp;&nbsp;&nbsp; will change to: "Stop Echo to Terminal").
 <h4>Echo Screen Text to File...</h4>
-    &nbsp;&nbsp;&nbsp; Use this to echo screen text to a disk file, in the same way as echo to console.<BR>
+    &nbsp;&nbsp;&nbsp; Use this to echo screen text to a disk file, in the same way as echo to terminal.<BR>
     &nbsp;&nbsp;&nbsp; Menu item text will also change, as in echo to screen.
      
 <IMG SRC="menu-debug.png" ALT="DEBUG MENU"><BR><BR>
