More work on 'help' html files. End-of-day commit.

--- a/help/buttons.html
+++ b/help/buttons.html
@@ -10,8 +10,7 @@
 
 <span style="font-size:14pt; color:black;">
 
-<BR>
-<center><h1 style="color:crimson;">Buttons</h1></center>
+<center><h1 style="color:crimson;"><BR>Buttons</h1></center>
 <BR>
 
 <h3>POWER</h3>
