--- a/help/slots.html
+++ b/help/slots.html
@@ -10,8 +10,7 @@
 
 <span style="font-size:14pt; color:black;">
 
-<BR>
-<center><h1 style="color:crimson;">Slots</h1></center>
+<center><h1 style="color:crimson;"><BR>Slots</h1></center>
 <BR>
 
 ApplePi emulates the first 4 models of Apple II computers.&nbsp; These models have seven expansion slots<sup>note1</sup>, numbered 1-7, which can hold peripheral controller cards.
