--- a/help/menus.html
+++ b/help/menus.html
@@ -10,8 +10,7 @@
 
 <span style="font-size:14pt; color:black;">
 
-<BR>
-<center><h1 style="color:crimson;">Menus</h1></center>
+<center><h1 style="color:crimson;"><BR>Menus</h1></center>
 <BR>
 
 
