--- a/help/printing.html
+++ b/help/printing.html
@@ -33,7 +33,8 @@ This is <i><u>very</u></i> unlike printing a PDF:</b>
 <b>Case 3: 'Print a PDF</b>' was used:
 <p style="margin-left: 20px">
 Data representing dot-matrix graphics will be accumulated in a buffer inside ApplePi.&nbsp; It will not be written to the PDF file until the '<b>Close Printer</b>' button is clicked. &nbsp;&nbsp; If the '<b>Close Printer</b>' button is <i><u>not</u></i> clicked before ApplePi is shut down, the PDF contents will be lost.
-<BR>
+<BR><BR>
+
 
 <p style="margin-left: 0px">
 <b>A few tricks</b></p>
@@ -43,9 +44,10 @@ If, for some reason, you don't wish to use <b>PR#1</b>, there are still some way
 
 <b>1)</b>&nbsp;&nbsp;In a terminal window:
 <p style="margin-left: 40px">
-* Select the 'Preferences->Echo Screen Text to Terminal' menu item and enter:&nbsp;&nbsp;&nbsp;&nbsp;
+* Enter:&nbsp;&nbsp;&nbsp;&nbsp;
 <font face=courier style=bold><b>applepi > somefilename.txt</b></font><BR>
-
+Then select the 'Preferences->Echo Screen Text to Terminal' menu item.
+<BR>
 * Or use:&nbsp;&nbsp;&nbsp;&nbsp;<font face=courier style=bold><b>applepi >> somefilename.txt</b></font>&nbsp;&nbsp;&nbsp;&nbsp;
 to append text to an existing file.<BR>
 * If you wish to see the text on the terminal as it is written to the file, use:<BR>
