Added some utlities in directory 'utilities'.  Html 'help' files now more-or-less complete.

--- a/help/buttons.html
+++ b/help/buttons.html
@@ -10,6 +10,15 @@
 
 <span style="font-size:14pt; color:black;">
 
+<BR><center>
+<b><a href="buttons.html">Buttons</a></b>  &nbsp;&nbsp;&nbsp;
+<b><a href="gamepad.html">Gamepad</a></b>  &nbsp;&nbsp;&nbsp;
+<b><a href="menus.html">Menus</a></b>      &nbsp;&nbsp;&nbsp;
+<b><a href="misc.html">Misc.</a></b>       &nbsp;&nbsp;&nbsp;
+<b><a href="printing.html">Printing</a></b>&nbsp;&nbsp;&nbsp;
+<b><a href="slots.html">Slots</a></b>      &nbsp;&nbsp;&nbsp;
+<BR></center>
+
 <center><h1 style="color:crimson;"><BR>Buttons</h1></center>
 <BR>
 
@@ -20,7 +29,7 @@
     
 <h3>Floppy 1 and Floppy 2</h3>
     <p style="margin-left: 20px">
-     Use these to insert 5&frac14;" floppy disk images into, or eject from,  the two floppy disk drives.
+     Use these to insert 5&frac14;" floppy disk images into, or eject from,  the two Disk II floppy disk drives.
      These disks exist as 140K (143,360 byte) files, usually with wthe suffix ".dsk".&nbsp;
      Note that such disk images cannot be used in the "HD" drives below them.<BR><BR>
      -- ProDos8 disks: "/", followed by the volume name is displayed just below the button.&nbsp;
@@ -50,7 +59,7 @@
     </p>
 <h3>Close Printer</h3>
     <p style="margin-left: 20px">
-    This is a slightly odd button, which is only visible when printing to a file.<BR>
+    This is a slightly odd button. Unlike all other buttons, it appears on the far right of the menu bar, and is visible only when printing to a file.<BR>
     See  <a href="printing.html">Printing</a> for an full explanation.
     </p>
 
@@ -60,5 +69,15 @@
     Use this to insert or eject a cassette tape image.  The data on the "tape" may be a BASIC
     program, text, or any binary data. 
     </p> 
-    <BR><BR>
+    
+<BR><center>
+<b><a href="buttons.html">Buttons</a></b>  &nbsp;&nbsp;&nbsp;
+<b><a href="gamepad.html">Gamepad</a></b>  &nbsp;&nbsp;&nbsp;
+<b><a href="menus.html">Menus</a></b>      &nbsp;&nbsp;&nbsp;
+<b><a href="misc.html">Misc.</a></b>       &nbsp;&nbsp;&nbsp;
+<b><a href="printing.html">Printing</a></b>&nbsp;&nbsp;&nbsp;
+<b><a href="slots.html">Slots</a></b>      &nbsp;&nbsp;&nbsp;
+<BR></center>
+
+<BR><BR>
 
