--- a/help/menus.html
+++ b/help/menus.html
@@ -10,6 +10,15 @@
 
 <span style="font-size:14pt; color:black;">
 
+<BR><center>
+<b><a href="buttons.html">Buttons</a></b>  &nbsp;&nbsp;&nbsp;
+<b><a href="gamepad.html">Gamepad</a></b>  &nbsp;&nbsp;&nbsp;
+<b><a href="menus.html">Menus</a></b>      &nbsp;&nbsp;&nbsp;
+<b><a href="misc.html">Misc.</a></b>       &nbsp;&nbsp;&nbsp;
+<b><a href="printing.html">Printing</a></b>&nbsp;&nbsp;&nbsp;
+<b><a href="slots.html">Slots</a></b>      &nbsp;&nbsp;&nbsp;
+<BR></center>
+
 <center><h1 style="color:crimson;"><BR>Menus</h1></center>
 <BR>
 
@@ -136,7 +145,15 @@
 <p style="margin-left: 20px">
      Displays a GPL (General Public License) statement, copyright notice, and a brief
      list of what operating systems ApplePi runs on.</p>
-
+ 
+<BR><center>
+<b><a href="buttons.html">Buttons</a></b>  &nbsp;&nbsp;&nbsp;
+<b><a href="gamepad.html">Gamepad</a></b>  &nbsp;&nbsp;&nbsp;
+<b><a href="menus.html">Menus</a></b>      &nbsp;&nbsp;&nbsp;
+<b><a href="misc.html">Misc.</a></b>       &nbsp;&nbsp;&nbsp;
+<b><a href="printing.html">Printing</a></b>&nbsp;&nbsp;&nbsp;
+<b><a href="slots.html">Slots</a></b>      &nbsp;&nbsp;&nbsp;
+<BR></center>
 <BR><BR>
 
 </span>
