--- a/help/misc.html
+++ b/help/misc.html
@@ -9,6 +9,16 @@
 
 
 <span style="font-size:14pt; color:black;">
+ 
+ 
+<BR><center>
+<b><a href="buttons.html">Buttons</a></b>  &nbsp;&nbsp;&nbsp;
+<b><a href="gamepad.html">Gamepad</a></b>  &nbsp;&nbsp;&nbsp;
+<b><a href="menus.html">Menus</a></b>      &nbsp;&nbsp;&nbsp;
+<b><a href="misc.html">Misc.</a></b>       &nbsp;&nbsp;&nbsp;
+<b><a href="printing.html">Printing</a></b>&nbsp;&nbsp;&nbsp;
+<b><a href="slots.html">Slots</a></b>
+<BR></center>
 
 <center><h1 style="color:crimson;"><BR>Miscellaneous</h1></center>
 <BR>
@@ -33,7 +43,7 @@ Debug output will still be visible on the terminal.
 <h3 style="color:crimson;">Booting from disk</h3>
 </p>
   <p style="margin-left: 20px">
-When ApplePi is turned on, it (i.e. the internal ROM) will search for a disk controller containing a disk in decreasing slot order beginning with slot 7 (the "HD 1" button), and boot from the first disk image it finds.
+When ApplePi is turned on, it (i.e. the internal ROM) will search for a disk controller containing a disk in decreasing slot order beginning with slot 7 (the "HD 1" button), and boot from the first bootable image it finds.
 <BR>
 A boot may be interrupted by pressing the 'RESET' button, and restarted with &nbsp;<font face=courier>PR#6</font>&nbsp; or &nbsp; <font face=courier>PR#7</font>
 <BR>
@@ -51,7 +61,7 @@ ApplePi uses disk images of three types:<BR>
  <BR>
  Example: &nbsp;&nbsp; DOS3 Vol.254
  <BR><BR>
-- ProDOS8 disks show a volume name, preceded by a "/".  &nbsp; Note that this is <i>not</i> &nbsp;the name of the file containing the disk image. 
+- ProDOS8 disks show a volume name, preceded by a "/".  &nbsp; Note that the volume name is <i>not</i> &nbsp;the name of the file containing the disk image. 
  <BR>
  Example: &nbsp;&nbsp; /APPLEWORKS
  <BR><BR>
@@ -61,9 +71,15 @@ Example: &nbsp;&nbsp; APPLE1:
 <BR>
 </p>
 
+  
+<BR><center>
+<b><a href="buttons.html">Buttons</a></b>  &nbsp;&nbsp;&nbsp;
+<b><a href="gamepad.html">Gamepad</a></b>  &nbsp;&nbsp;&nbsp;
+<b><a href="menus.html">Menus</a></b>      &nbsp;&nbsp;&nbsp;
+<b><a href="misc.html">Misc.</a></b>       &nbsp;&nbsp;&nbsp;
+<b><a href="printing.html">Printing</a></b>&nbsp;&nbsp;&nbsp;
+<b><a href="slots.html">Slots</a></b>
+<BR></center>
 
-<p style="margin-left: 0px">
-<h3 style="color:crimson;">next...</h3>
-</p>
 <BR>
 
