--- a/help/slots.html
+++ b/help/slots.html
@@ -9,6 +9,15 @@
 
 
 <span style="font-size:14pt; color:black;">
+ 
+<BR><center>
+<b><a href="buttons.html">Buttons</a></b>  &nbsp;&nbsp;&nbsp;
+<b><a href="gamepad.html">Gamepad</a></b>  &nbsp;&nbsp;&nbsp;
+<b><a href="menus.html">Menus</a></b>      &nbsp;&nbsp;&nbsp;
+<b><a href="misc.html">Misc.</a></b>       &nbsp;&nbsp;&nbsp;
+<b><a href="printing.html">Printing</a></b>&nbsp;&nbsp;&nbsp;
+<b><a href="slots.html">Slots</a></b>      &nbsp;&nbsp;&nbsp;
+<BR></center>
 
 <center><h1 style="color:crimson;"><BR>Slots</h1></center>
 <BR>
@@ -41,7 +50,7 @@ To use a slot, enter <font face=courier><b>PR#n,</b></font>&nbsp;(i.e, "print to
 <p style="margin-left: 0px">
 <b>Slot 6</b>
   <p style="margin-left: 20px">
-  <font face=courier><b>PR#6</b></font> &nbsp; boots from the 5&frac14;" disk image in the drive labelled "Floppy 1". <sup>note3</sup>
+  <font face=courier><b>PR#6</b></font> &nbsp; boots from the 5&frac14;" disk image in the Disk II drive labelled "Floppy 1". <sup>note3</sup>
   <\p>
  <BR></p>
 
@@ -63,6 +72,18 @@ Note 2:<BR>
 (This type of controller may or may not have actually existed in the real world.&nbsp;&nbsp;Just pretend, OK?)
 <BR><BR>
 Note 3:<BR>
-The Disk II controller was an utterly brilliant design by Steve Wozniak which allowed the controller to be sold <i>far</i> less than anything else on the market at that time, and small enough to fit inside the AppleII case. &nbsp;  An unavoidable side-effect of the design was a format completely incompatible with anything else on the planet. &nbsp; So AppleII owners gained a lot (a disk drive they could afford), and lost only a little.
+The Disk II controller was an utterly brilliant design by Steve Wozniak which allowed the controller to be sold <i>far</i> less than anything else on the market at that time, and small enough to fit inside the AppleII case. &nbsp;  An unavoidable side-effect of the design was a format completely incompatible with anything else on the planet. &nbsp; So AppleII owners gained a lot (a disk drive they could afford), and lost only a little. &nbsp; This is the reason it is not possible to share disk images between slots 6 and 7.
+ 
+<BR><center>
+<b><a href="buttons.html">Buttons</a></b>  &nbsp;&nbsp;&nbsp;
+<b><a href="gamepad.html">Gamepad</a></b>  &nbsp;&nbsp;&nbsp;
+<b><a href="menus.html">Menus</a></b>      &nbsp;&nbsp;&nbsp;
+<b><a href="misc.html">Misc.</a></b>       &nbsp;&nbsp;&nbsp;
+<b><a href="printing.html">Printing</a></b>&nbsp;&nbsp;&nbsp;
+<b><a href="slots.html">Slots</a></b>      &nbsp;&nbsp;&nbsp;
+<BR></center>
+
+<BR><BR>
+
 <BR><BR>
 
