--- a/help/printing.html
+++ b/help/printing.html
@@ -9,6 +9,15 @@
 
 
 <span style="font-size:14pt; color:black;">
+ 
+<BR><center>
+<b><a href="buttons.html">Buttons</a></b>  &nbsp;&nbsp;&nbsp;
+<b><a href="gamepad.html">Gamepad</a></b>  &nbsp;&nbsp;&nbsp;
+<b><a href="menus.html">Menus</a></b>      &nbsp;&nbsp;&nbsp;
+<b><a href="misc.html">Misc.</a></b>       &nbsp;&nbsp;&nbsp;
+<b><a href="printing.html">Printing</a></b>&nbsp;&nbsp;&nbsp;
+<b><a href="slots.html">Slots</a></b>      &nbsp;&nbsp;&nbsp;
+<BR></center>
 
 
 <center><h1 style="color:crimson;"><BR>Printing</h1></center>
@@ -32,7 +41,7 @@ This is <i><u>very</u></i> unlike printing a PDF:</b>
 <p style="margin-left: 0px">
 <b>Case 3: 'Print a PDF</b>' was used:
 <p style="margin-left: 20px">
-Data representing dot-matrix graphics will be accumulated in a buffer inside ApplePi.&nbsp; It will not be written to the PDF file until the '<b>Close Printer</b>' button is clicked. &nbsp;&nbsp; If the '<b>Close Printer</b>' button is <i><u>not</u></i> clicked before ApplePi is shut down, the PDF contents will be lost.
+Data representing dot-matrix graphics will be accumulated in a buffer inside ApplePi.&nbsp; It will not be written to the PDF file until the '<b>Close Printer</b>' button is clicked. &nbsp;&nbsp; If the '<b>Close Printer</b>' button is <i><u>not</u></i> &nbsp;clicked before ApplePi is shut down, the entire PDF contents will be lost.
 <BR><BR>
 
 
@@ -55,11 +64,18 @@ to append text to an existing file.<BR>
 
 <p style="margin-left: 20px">
 <b>2)</b>&nbsp;&nbsp;Select the 'Preferences->Echo Screen Text to File...' menu item.<BR><BR>
-Any of these 'trick' methods will echo any text which appears the screen to a disk file, including all entered commands, whether in Basic or in the Apple II monitor.
-
-
+Any of these 'trick' methods will echo any text which subsequently appears the screen to a disk file, including all entered commands, whether in Basic or in the Apple II monitor.
 
 </p>
+ 
+<BR><center>
+<b><a href="buttons.html">Buttons</a></b>  &nbsp;&nbsp;&nbsp;
+<b><a href="gamepad.html">Gamepad</a></b>  &nbsp;&nbsp;&nbsp;
+<b><a href="menus.html">Menus</a></b>      &nbsp;&nbsp;&nbsp;
+<b><a href="misc.html">Misc.</a></b>       &nbsp;&nbsp;&nbsp;
+<b><a href="printing.html">Printing</a></b>&nbsp;&nbsp;&nbsp;
+<b><a href="slots.html">Slots</a></b>      &nbsp;&nbsp;&nbsp;
+<BR></center>
 
 <BR><BR>
 
