Added missing word in slots.html

--- a/help/slots.html
+++ b/help/slots.html
@@ -72,7 +72,7 @@ Note 2:<BR>
 (This type of controller may or may not have actually existed in the real world.&nbsp;&nbsp;Just pretend, OK?)
 <BR><BR>
 Note 3:<BR>
-The Disk II controller was an utterly brilliant design by Steve Wozniak which allowed the controller to be sold <i>far</i> less than anything else on the market at that time, and small enough to fit inside the AppleII case. &nbsp;  An unavoidable side-effect of the design was a format completely incompatible with anything else on the planet. &nbsp; So AppleII owners gained a lot (a disk drive they could afford), and lost only a little. &nbsp; This is the reason it is not possible to share disk images between slots 6 and 7.
+The Disk II controller was an utterly brilliant design by Steve Wozniak which allowed the controller to be sold for <i>far</i> less than anything else on the market at that time, and small enough to fit inside the AppleII case. &nbsp;  An unavoidable side-effect of the design was a format completely incompatible with anything else on the planet. &nbsp; So AppleII owners gained a lot (a disk drive they could afford), and lost only a little. &nbsp; This is the reason it is not possible to share disk images between slots 6 and 7.
  
 <BR><center>
 <b><a href="buttons.html">Buttons</a></b>  &nbsp;&nbsp;&nbsp;
