minor cosmetic changes to help/buttons.html & rom_dialog.cpp

--- a/help/buttons.html
+++ b/help/buttons.html
@@ -32,6 +32,7 @@
      Use these to insert 5&frac14;" floppy disk images into, or eject from,  the two Disk II floppy disk drives.
      These disks exist as 140K (143,360 byte) files, usually with wthe suffix ".dsk".&nbsp;
      Note that such disk images cannot be used in the "HD" drives below them.<BR><BR>
+     Button labels:<BR>
      -- ProDos8 disks: "/", followed by the volume name is displayed just below the button.&nbsp;
      (This volume name, which is stored in the disk, is NOT the name of the file
      containing the image.)<BR>
