Added keyboard info to misc.html; minor formatting changes to buttons.html

--- a/help/buttons.html
+++ b/help/buttons.html
@@ -33,14 +33,14 @@
      These disks exist as 140K (143,360 byte) files, usually with wthe suffix ".dsk".&nbsp;
      Note that such disk images cannot be used in the "HD" drives below them.<BR><BR>
      Button labels:<BR>
-     -- ProDos8 disks: "/", followed by the volume name is displayed just below the button.&nbsp;
+     -- ProDos8 disks: A forward-slash ("/"), followed by the volume name is displayed just below the button.&nbsp;
      (This volume name, which is stored in the disk, is NOT the name of the file
      containing the image.)<BR>
      -- Apple Dos3 disks: "DOS3" and the volume number of the disk is displayed
      instead.&nbsp; For various reasons which we can't go into here, this number is usually 254.<BR>
-     -- Apple Pascal disks: the volume name is shown followed by ":" <BR><BR>
+     -- Apple Pascal disks: the volume name is shown (again, NOT the filename), followed by a colon (":") <BR><BR>
      (In BASIC, use <font face=courier style=bold><b>PR#6</b></font> or
-      <font face=courier style=bold><b>IN#6</b></font> to boot from 'Floppy 1'.)
+      <font face=courier style=bold><b>IN#6</b></font> to boot from 'Floppy 1'.
     </p>
 <h3>HD 1 and HD 2</h3>
     <p style="margin-left: 20px">
