--- a/help/misc.html
+++ b/help/misc.html
@@ -39,6 +39,18 @@ Debug output will still be visible on the terminal.
 </p>
 
 
+<h3 style="color:crimson;">Keyboard</h3>
+ <p style="margin-left: 20px">
+Any modern keyboard will work nicely, but four keys are slightly different:<BR>
+- The left-'Alt' key is used for the AppleIIe 'Open Apple' key.<BR>
+- The Right-'Alt' key is used for the AppleIIe 'Closed Apple' key.<BR>
+- 'Backspace' and 'delete' keys: depending on which AppleII model is being emulated, and which program is running on it, one of these will do what you wish, and the other won't.
+&nbsp;&nbsp; Trial and error will show you which to use.
+<BR>
+</p>
+
+
+
  <p style="margin-left: 0px">
 <h3 style="color:crimson;">Booting from disk</h3>
 </p>
@@ -51,9 +63,12 @@ A boot may be interrupted by pressing the 'RESET' button, and restarted with &nb
 
 <h3 style="color:crimson;">Disks</h3>
  <p style="margin-left: 20px">
-ApplePi uses disk images of three types:<BR>
-- In "Floppy 1 & 2" drives:  5&frac14;" disk images in 140K (143360 byte) files. <BR>
-- "HD 1 & 2" drives:  3&frac12;" disk images in 800K (819200 byte) files, or hard drive images in up to 32MB files.
+ApplePi uses disk images of three types:<BR><BR>
+
+- In "Floppy 1 & 2" drives:<BR>
+  &nbsp;&nbsp;  5&frac14;" DiskII images in 140K (143360 byte) files. <BR><BR>
+- "HD 1 & 2" drives:<BR>
+  &nbsp;&nbsp;  3&frac12;" disk images in 800K (819200 byte) files, or hard drive images in up to 32MB files.
 <BR><BR>
  Below each disk button is a lable identfying the loaded disk:
  <BR><BR>
