A few fixes to the 'help' html files.

--- a/help/misc.html
+++ b/help/misc.html
@@ -36,8 +36,17 @@ Running from a terminal is necessary when using most of the <b>Debug</b> tools. 
 <BR>
 Debug output will still be visible on the terminal.
 <BR>
+<BR>
+There is not yet an 80-column card in slot 3 for use by the original AppleII and AppleII+ ROMs.  A card may be added in a later ApplePi revison.
+<BR>
 </p>
 
+
+<h3 style="color:crimson;">Running ProDos</h3>
+ <p style="margin-left: 20px">
+When running ProDos, ApplePi sets and updates the time and date automatically. (Because why not?)
+<BR>
+</p>
 
 <h3 style="color:crimson;">Keyboard</h3>
  <p style="margin-left: 20px">
